2011-01-14  William A. Perkins  <william.perkins@pnl.gov>

	* hydro_solve.f90 (hydro): pre-compute flow areas for "FLUX" bc's
	(collectively)

	* hydro_bc.f90 (read_bcspecs): allocate space for flow area when
	bc kind is "FLUX"

	* block_hydro_bc.f90 (block_compute_bc_flux): pre-compute flow
	areas for "FLUX" bc's

2011-01-13  William A. Perkins  <william.perkins@pnl.gov>

	* solver_petsc.F90 (solver_initialize): read options from a file

	* hydro_solve.f90 (hydro): distribute velocity and depth after
	*all* boundary conditions have been processed

	* block_initialization.f90 (initialize): old depth needs to be
	gotten after it's put; remote values are needed locally

	* block_hydro_bc.f90 (apply_hydro_bc): don't distribute adjusted
	velocity and depth here; wait until all bc's are processed

	* block_hydro.f90 (block_mass_source_sum): comment out debug message

	* block_grid.f90 (block_metrics): some of the metrics were not
	distributed

2010-12-17  William A. Perkins  <william.perkins@pnl.gov>

	* configure.in: need to call AC_PROG_FC() before AC_PROG_F90()

	* table_bc_module.f90 (table_boundary_conditions): increase
	maximum number of table columns

2010-04-07  William A. Perkins  <william.perkins@pnl.gov>

	* plot_netcdf.f90 (plot_file_setup_netcdf, plot_print_netcdf): add
	new block variables uflux and vflux to output

	* plot_cgns.f90 (plot_cgns_write): write uflux and vflux

	* global_module_023.f90 (globals, allocate_block_components): add
	new block variables uflux and vflux
	(velocity_shift): compute p-cell velocities using fluxes instead
	of averaging; compute new block variables uflux and vflux

	* accumulator.f90 (accumulator, accum_initialize, accum_reset) 
	(accumulate, accum_calc): add new accumulated variables uflux and
	vflux 

2010-04-02  William A. Perkins  <william.perkins@pnl.gov>

	* mass2_main_025.f90 (fillghost_hydro): incorrect indexes used for
	flux calculations in fine block

	* Makefile.am (scalars_source.o): now depends on